<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="DuplicateDefinition">코인</string>
    <string name="app_name_dev" tools:ignore="DuplicateDefinition">코인D</string>
    <string name="sign_up">회원가입</string>
    <string name="login_complete">로그인완료</string>
    <string name="find_password">비밀번호찾기</string>
    <string name="snack_bar_login_title">로그인이 필요한 기능이에요.</string>
    <string name="snack_bar_login_action_text">로그인 하기</string>
    <string name="home">홈</string>
    <string name="navigation_item_store">상점</string>
    <string name="navigation_item_dining">식단</string>
    <string name="navigation_item_circle">동아리</string>
    <string name="navigation_item_land">복덕방</string>
    <string name="navigation_item_free_board">자유게시판</string>
    <string name="navigation_item_anonymous_board">익명게시판</string>
    <string name="navigation_item_recruit_board">취업게시판</string>
    <string name="navigation_item_callvan_sharing">콜밴쉐어링</string>
    <string name="navigation_item_real_estate">복덕방</string>
    <string name="navigation_item_usedmarket">중고장터</string>
    <string name="navigation_item_timetable">시간표</string>
    <string name="navigation_item_search">검색</string>
    <string name="navigation_item_user_info">회원 정보</string>
    <string name="navigation_item_setting">설정</string>
    <string name="navigation_item_koin_page">코인 사이트</string>
    <string name="navigation_item_kakao_talk">카카오톡 대화</string>
    <string name="navigation_item_version_info">버전 정보</string>
    <string name="navigation_item_developer">만든 이</string>
    <string name="navigation_item_open_source">오픈소스</string>
    <string name="navigation_item_login">로그인</string>
    <string name="navigation_item_logout">로그아웃</string>
    <string name="navigation_cancel">취소</string>
    <string name="login_request">로그인이 필요한 서비스입니다.\n로그인 하시겠습니까?</string>
    <string name="navigation_ok">확인</string>
    <string name="user_only">회원 전용 서비스</string>
    <string name="to_be_opened">서비스예정입니다</string>
    <string name="press_again_to_exit">뒤로가기 버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="user_anon">익명</string>
    <string name="server_failed">서버와 연결에 실패하였습니다</string>
    <string name="upcoming_launch_service">"준비중입니다. 조금만 기다려주세요"</string>
    <string name="version_check_success">최신 버전을 사용하고 있습니다.</string>
    <string name="version_check_failed">버전 정보를 불러오지 못하였습니다. 네트워크 연결을 확인해주세요.</string>
    <string name="token_out_dated">인증 정보가 만료되었습니다. 다시 로그인해 주세요.</string>
    <string name="login_required_field_not_filled">아이디와 비밀번호를 입력해주세요</string>
    <string name="koreatech_email_postfix">%1$s\u0040koreatech.ac.kr</string>
    <string name="koreatech_email">\u0040 koreatech.ac.kr</string>
    <string name="koreatech_url">https://portal.koreatech.ac.kr/</string>
    <string name="koreatech_operating_info_stage_url">https://stage.koreatech.in/webview/campusinfo</string>
    <string name="koreatech_operating_info_production_url">https://koreatech.in/webview/campusinfo</string>
    <string name="koreatech_email_url">https://email.koreatech.ac.kr/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup_to_login">이미 계정이 있으신가요? <b> 로그인하기 </b> </string>
    <string name="back_button_pressed">정말 저장하지 않고 나가시겠어요?</string>
    <string name="erase_button_pressed">정말 전체를 지우겠어요?</string>
    <string name="board_number">글번호</string>
    <string name="board_view_count">조회</string>
    <string name="board_comment_count">댓글수</string>
    <string name="board_author">작성자</string>
    <string name="board_create">작성</string>
    <string name="board_edit">수정</string>
    <string name="comment_edit">수정</string>
    <string name="comment_remove">삭제</string>
    <string name="comment_reply">댓글</string>
    <string name="bus_search_button">조회</string>
    <string name="bus_spinner_select_error">출발지와 도착지는 달라야합니다.</string>
    <string name="daesung_depature_place_university_to_yawoori">안동출발버스</string>
    <string name="daesung_depature_place_yawoori_to_university">야우리출발버스</string>
    <string name="bus_no_information">운행정보없음</string>
    <string name="market_used_phone_check">잘못된 휴대폰 번호입니다.\n 010–1234–1234 양식을 지켜주세요.</string>
    <string name="market_used_title_check">제목을 입력해주세요</string>
    <string name="market_used_content_check">내용을 입력해주세요</string>
    <string name="market_used_title_content_check">제목과 내용을 입력해주세요</string>
    <string name="market_used_list_last_page">마지막 품목입니다.</string>
    <string name="market_used_get_list_fail">리스트를 불러올수 없습니다.</string>
    <string name="user_lock_bottom_sheet_behavior">in.koreatech.koin.ui.timetable.UserLockBottomSheetBehavior</string>
    <string name="signup_info">인적사항</string>
    <string name="signup_name">이름 (선택)</string>
    <string name="signup_nickname">닉네임 (선택)</string>
    <string name="signup_nickname_check_duplicated">중복 확인</string>
    <string name="signup_gender">성별 (선택)</string>
    <string name="signup_gender_man">남자</string>
    <string name="signup_gender_woman">여자</string>
    <string name="signup_phone_number">전화번호 (선택)</string>
    <string name="signup_student_id">학번 (선택)</string>
    <string name="signup_major">학부 (선택)</string>
    <string name="signup_is_graduate">졸업여부 (선택)</string>
    <string name="signup_graduated_student">졸업생</string>
    <string name="signup_enrolled_student">재학생</string>
    <string name="signup_confirm">회원가입하기</string>
    <string name="signup_email_sending">이메일 전송 중</string>
    <string name="signup_term_check_message_ask">&quot;동의&quot; 체크 박스에 체크를 한 후 이메일 인증하기 버튼을 클릭하면 본 약관에 동의하는 것으로 간주합니다.</string>
    <string name="signup_error_email_already_send_or_email_requested">이미 가입한 계정이거나\n이메일 전송을 요청하였습니다.</string>
    <string name="signup_term_check_message_checked">모든 약관에 동의하셨습니다.</string>
    <string name="signup_error_check_email">이메일을 확인해 주세요.</string>
    <string name="signup_error_check_koin_terms">코인 이용약관에 동의해 주세요</string>
    <string name="signup_error_check_privacy_terms">개인정보 이용약관에 동의해 주세요</string>
    <string name="signup_error_check_password">특수문자를 포함한 영어와 숫자 6~18 자리 비밀번호를 입력해주세요</string>
    <string name="signup_error_check_password_match">비밀번호가 일치하지 않습니다</string>
    <string name="signup_error_when_email_validation">이메일 인증 중 오류가 발생했습니다</string>
    <string name="signup_init_name">이름을 올바른 형식으로 입력해주세요</string>
    <string name="signup_init_phone_number">전화번호를 올바른 형식으로 입력해주세요</string>
    <string name="signup_init_student_id">학번을 입력해주세요</string>
    <string name="signup_check_nickname_duplication">닉네임 중복 검사를 진행해주세요.</string>
    <string name="signup_check_gender">성별을 선택해주세요</string>
    <string name="signup_check_graduate">졸업유무를 선택해주세요</string>
    <string name="signup_privacy_terms">개인정보 이용약관</string>
    <string name="signup_privacy_terms_error">약관을 가져오는 중 오류가 발생했습니다.\n%1$s</string>
    <string name="signup_koin_terms">코인 이용약관</string>
    <string name="signup_koin_terms_error">약관을 가져오는 중 오류가 발생했습니다.\n%1$s</string>
    <string name="signup_email_check">사용할 수 있는 이메일입니다.</string>
    <string name="signup_nickname_available">사용할 수 있는 닉네임입니다.</string>
    <string name="signup_email_validation_completed_title">KOREATECH E-mail 인증</string>
    <string name="signup_email_validation_completed_message">10분안에 학교 메일로 인증을 완료해 주세요. 이동하실래요?</string>
    <string name="signup_complete_title">임시 회원 가입 완료</string>
    <string name="signup_complete_description">임시 회원 가입이 완료되었습니다.\n10분 안에 아우누리에서 이메일 인증해 주세요.</string>
    <string name="signup_complete_go_college_portal">아우누리 바로가기</string>
    <string name="signup_complete_go_login">로그인 화면 바로가기</string>
    <string name="forgotpassword_title">FORGOT PASSWORD?</string>
    <string name="forgotpassword_message">비밀번호 초기화가 필요합니다.\n계정을 찾으려면 KOREATECH 이메일을 입력해주세요.</string>
    <string name="forgotpassword_reset_password_button">RESET PASSWORD</string>
    <string name="forgotpassword_goto_login_button">비밀번호가 기억나시나요? 로그인하기</string>
    <string name="forgotpassword_sent_email_title">KOREATECH E-mail 인증</string>
    <string name="forgotpassword_sent_email_message">학교 메일로 비밀번호 초기화를 완료해 주세요. 이동하실래요?</string>
    <string name="lost_and_found_created">생성되었습니다.</string>
    <string name="lost_and_found_edited">수정되었습니다.</string>
    <string name="lost_and_found_deleted">삭제되었습니다.</string>
    <string name="lost_and_found_delete_fail">삭제에 실패했습니다.</string>
    <string name="major_title">학부</string>
    <string name="major_architectural_engineering">건축공학부</string>
    <string name="major_employment_service_policy">고용서비스정책학과</string>
    <string name="major_mechanical_engineering">기계공학부</string>
    <string name="major_industrial_design_and_architectural_engineering">디자인건축공학부</string>
    <string name="major_industrial_design">디자인공학부</string>
    <string name="major_mechatronics_engineering">메카트로닉스공학부</string>
    <string name="major_industrial_management">산업경영학부</string>
    <string name="major_electrical_electronics_and_communication_engineering">전기전자통신공학부</string>
    <string name="major_computer_science_and_engineering">컴퓨터공학부</string>
    <string name="major_chemical_engineering">화학생명공학부</string>
    <string name="major_energy_meterials_chemical_engineering">에너지신소재화학공학부</string>
    <string name="major_hrd">HRD</string>
    <string name="major_department_of_future_technology">융합</string>
    <string name="major_liberal_arts">교양학부</string>
    <string name="file_path_base">/Pictures/koin/</string>
    <string name="font_kr_bold">fonts/notosanscjkkr_bold.otf</string>
    <string name="font_regular">fonts/notosans_regular.ttf</string>
    <string name="font_semibold">fonts/notosans_semibold.ttf</string>
    <string name="font_kr_light">fonts/notosanscjkkr_light.otf</string>
    <string name="font_medium">fonts/notosans_medium.ttf</string>
    <string name="font_light">fonts/notosans_light.ttf</string>
    <string name="font_kr_medium">fonts/notosanscjkkr_medium.otf</string>
    <string name="font_kr_regular">fonts/notosanscjkkr_regular.otf"</string>
    <string name="take_screen_shot_activity">Activity Screenshot</string>
    <string name="take_screen_shot_view">Layout Screenshot</string>
    <string name="take_save_screen_shot">Save Screenshot</string>
    <string name="reset">Reset</string>
    <string name="toast_message_screenshot">First Take any Screenshot</string>
    <string name="toast_message_screenshot_success">Screenshot saved successfully.</string>
    <string name="settings_message">Go to Permissions to Grant Storage</string>
    <string name="setting_title_normal">일반</string>
    <string name="setting_item_profile">프로필</string>
    <string name="setting_item_change_password">비밀번호 변경</string>
    <string name="setting_item_notification">알림</string>
    <string name="setting_title_service">서비스</string>
    <string name="setting_item_privacy_policy">개인정보 처리방침</string>
    <string name="setting_item_koin_terms">코인 이용약관</string>
    <string name="setting_item_open_source_license">오픈소스 라이선스</string>
    <string name="setting_item_app_version">앱 버전</string>
    <string name="setting_item_contact">문의하기</string>
    <string name="user_info_title_basic">기본정보</string>
    <string name="user_info_id_title">아이디</string>
    <string name="user_info_name_title">이름</string>
    <string name="user_info_nickname_title">닉네임</string>
    <string name="user_info_phone_number_title">휴대전화</string>
    <string name="user_info_gender_title">성별</string>
    <string name="user_info_title_student_info">학생정보</string>
    <string name="user_info_student_id_title">학번</string>
    <string name="user_info_major_title">전공</string>
    <string name="user_info_user_leave_title">회원탈퇴</string>
    <string name="force_update_already_update">이미 업데이트를 하셨나요?</string>
    <string name="force_update_dialog_content">업데이트 이후에도 이 화면이 나타나는\n경우에는 스토어에서 코인을\n삭제 후 재설치 해 주세요.</string>
    <string name="force_update_go_store">스토어로 가기</string>
    <string name="check">확인</string>
</resources>