<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_user_info"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <in.koreatech.koin.core.appbar.AppBarBase
            android:id="@+id/appbar_user_info"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:leftButtonBackground="@drawable/ic_back_arrow"
            app:rightButtonText="@string/common_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:titleText="내 프로필" />

        <TextView
            android:id="@+id/view_title_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/neutral_50"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/user_info_title_basic"
            android:textAppearance="@style/TextAppearance.Koin.Medium.14"
            android:textColor="@color/neutral_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_user_info" />

        <in.koreatech.koin.core.view.setting.SettingView
            android:id="@+id/sv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:headText="@string/user_info_id_title"
            app:headTextAppearance="@style/TextAppearance.Koin.Regular.16"
            app:labelType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_title_normal" />

        <in.koreatech.koin.core.view.setting.SettingView
            android:id="@+id/sv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:headText="@string/user_info_name_title"
            app:headTextAppearance="@style/TextAppearance.Koin.Regular.16"
            app:labelType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_id" />

        <in.koreatech.koin.core.view.setting.SettingView
            android:id="@+id/sv_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:headText="@string/user_info_nickname_title"
            app:headTextAppearance="@style/TextAppearance.Koin.Regular.16"
            app:labelType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_name" />

        <in.koreatech.koin.core.view.setting.SettingView
            android:id="@+id/sv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:headText="@string/user_info_phone_number_title"
            app:headTextAppearance="@style/TextAppearance.Koin.Regular.16"
            app:labelType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_nickname" />

        <TextView
            android:id="@+id/view_title_student_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/neutral_50"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/user_info_title_student_info"
            android:textAppearance="@style/TextAppearance.Koin.Medium.14"
            android:textColor="@color/neutral_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_phone_number" />

        <in.koreatech.koin.core.view.setting.SettingView
            android:id="@+id/sv_student_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:headText="@string/user_info_student_id_title"
            app:headTextAppearance="@style/TextAppearance.Koin.Regular.16"
            app:labelType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_title_student_info" />

        <in.koreatech.koin.core.view.setting.SettingView
            android:id="@+id/sv_major"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:headText="@string/user_info_major_title"
            app:headTextAppearance="@style/TextAppearance.Koin.Regular.16"
            app:labelType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_student_number" />

        <in.koreatech.koin.core.view.setting.SettingView
            android:id="@+id/sv_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:headText="@string/user_info_gender_title"
            app:headTextAppearance="@style/TextAppearance.Koin.Regular.16"
            app:labelType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_major" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_leave"
            android:layout_width="0dp"
            android:background="@drawable/background_btn_gray_border"
            android:layout_height="48dp"
            android:text="@string/user_info_user_leave_title"
            android:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="84dp"/>
<!--        버튼-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
