<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title=" "
            android:id="@+id/navi_item_user_info_title"
            >
            <menu>

                <item
                    android:id="@+id/navi_item_user_info"
                    android:icon="@drawable/ic_person_gray"
                    android:title="@string/navigation_item_user_info"/>
                <!--<item-->
                <!--android:id="@+id/navi_item_setting"-->
                <!--android:icon="@drawable/ic_settings_gray"-->
                <!--android:title="@string/navigation_item_setting"/>-->
            </menu>
        </item>

        <item android:title=" "
            android:id="@+id/navi_item_login_title"
            >
            <menu>
                <item
                    android:id="@+id/navi_item_login"
                    android:icon="@drawable/ic_person_gray"
                    android:title="@string/navigation_item_login"/>
                <!--<item-->
                <!--android:id="@+id/navi_item_setting"-->
                <!--android:icon="@drawable/ic_settings_gray"-->
                <!--android:title="@string/navigation_item_setting"/>-->
            </menu>
        </item>


        <item android:title="고객 지원">
            <menu>
                <!--<item-->
                <!--android:id="@+id/navi_item_user_request"-->
                <!--android:icon="@drawable/ic_feedback_gray"-->
                <!--android:title="문의 사항"/>-->

                <item
                    android:id="@+id/navi_item_kakao_talk"
                    android:icon="@drawable/ic_kakaotalk_gray"
                    android:title="카카오톡 1:1 대화"/>

                <item
                    android:id="@+id/navi_item_version_info"
                    android:icon="@drawable/ic_android_gray"
                    android:title="@string/navigation_item_version_info"/>
            </menu>
        </item>

        <item android:title="To contact us">
            <menu>
                <item
                    android:id="@+id/navi_item_developer"
                    android:icon="@drawable/ic_person_gray"
                    android:title="@string/navigation_item_developer"/>
            </menu>
        </item>
    </group>
</menu>