<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rect_white_radius_4"
    android:paddingHorizontal="32dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/force_update_already_update"
        android:textColor="@color/neutral_800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/force_update_dialog_content"
        android:textColor="@color/neutral_600"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bg_rect_white_stroke_neutral500_radius_4dp"
        android:paddingVertical="12dp"
        android:stateListAnimator="@null"
        android:text="@string/check"
        android:textColor="@color/neutral_600"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/btn_store"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rect_primary_radius_4dp"
        android:paddingVertical="12dp"
        android:stateListAnimator="@null"
        android:text="@string/force_update_go_store"
        android:textColor="@color/neutral_0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />

</androidx.constraintlayout.widget.ConstraintLayout>